Include logic to update employee
